asgn4/y.output
Terminals unused in grammar

   IN
   SIMPLE_ESC_SEQ
   WHERE


State 317 conflicts: 1 shift/reduce
State 633 conflicts: 1 shift/reduce


Grammar

    0 $accept: start $end

    1 start: compilation_unit

    2 identifier: ID

    3 literal: boolean_literal
    4        | integer_literal
    5        | character_literal
    6        | string_literal
    7        | null_literal

    8 boolean_literal: TRUE
    9                | FALSE

   10 integer_literal: DINT_LITERAL
   11                | HDINT_LITERAL

   12 character_literal: CHAR_LITERAL

   13 string_literal: REG_STR_LITERAL
   14               | VER_STR_LITERAL

   15 null_literal: NULL_LIT

   16 right_shift: RSHIFT

   17 right_shift_assignment: RSHIFTEQ

   18 namespace_name: namespace_or_type_name

   19 type_name: namespace_or_type_name

   20 namespace_or_type_name: qualified_identifier
   21                       | qualified_alias_member

   22 type: non_array_type
   23     | array_type

   24 non_array_type: type_name
   25               | simple_type
   26               | nullable_type

   27 simple_type: numeric_type
   28            | class_type
   29            | BOOL

   30 numeric_type: integral_type

   31 integral_type: INT
   32              | LONG
   33              | CHAR

   34 nullable_type: non_nullable_value_type '?'

   35 non_nullable_value_type: simple_type

   36 class_type: OBJECT
   37           | STRING

   38 variable_reference: expression

   39 argument_list: argument
   40              | argument_list ',' argument

   41 argument: argument_value
   42         | argument_name argument_value

   43 argument_name: identifier ':'

   44 argument_value: expression
   45               | REF variable_reference

   46 primary_expression: primary_no_array_creation_expression
   47                   | array_creation_expression
   48                   | parenthesized_expression

   49 primary_no_array_creation_expression: literal
   50                                     | member_access
   51                                     | invocation_expression
   52                                     | element_access
   53                                     | this_access
   54                                     | base_access
   55                                     | object_creation_expression
   56                                     | typeof_expression
   57                                     | default_value_expression

   58 parenthesized_expression: '(' expression ')'

   59 $@1: %empty

   60 member_access: primary_expression '.' identifier $@1
   61              | predefined_type '.' identifier
   62              | qualified_alias_member '.' identifier

   63 predefined_type: BOOL
   64                | CHAR
   65                | INT
   66                | LONG
   67                | OBJECT
   68                | STRING

   69 invocation_expression: primary_no_array_creation_expression '(' ')'
   70                      | primary_no_array_creation_expression '(' argument_list ')'
   71                      | qualified_identifier '(' ')'
   72                      | qualified_identifier '(' argument_list ')'

   73 element_access: primary_no_array_creation_expression '[' expression ']'
   74               | qualified_identifier '[' expression ']'

   75 expression_list: expression
   76                | expression_list ',' expression

   77 this_access: THIS

   78 base_access: BASE '.' identifier
   79            | BASE '[' expression_list ']'

   80 postfix_expression: primary_expression
   81                   | qualified_identifier

   82 object_creation_expression: NEW type '(' ')'
   83                           | NEW type '(' argument_list ')'
   84                           | NEW type '(' ')' object_or_collection_initializer
   85                           | NEW type '(' argument_list ')' object_or_collection_initializer

   86 object_or_collection_initializer: object_initializer
   87                                 | collection_initializer

   88 object_initializer: '{' '}'
   89                   | '{' member_initializer_list '}'
   90                   | '{' member_initializer_list ',' '}'

   91 member_initializer_list: member_initializer
   92                        | member_initializer_list ',' member_initializer

   93 member_initializer: identifier '=' initializer_value

   94 initializer_value: expression
   95                  | object_or_collection_initializer

   96 collection_initializer: '{' element_initializer_list '}'
   97                       | '{' element_initializer_list ',' '}'

   98 element_initializer_list: element_initializer
   99                         | element_initializer_list ',' element_initializer

  100 element_initializer: non_assignment_expression
  101                    | '{' expression_list '}'

  102 array_creation_expression: NEW non_array_type '[' integer_literal ']'
  103                          | NEW non_array_type '[' integer_literal ']' array_initializer
  104                          | NEW array_type array_initializer

  105 typeof_expression: TYPEOF '(' type ')'
  106                  | TYPEOF '(' VOID ')'

  107 default_value_expression: DEFAULT '(' type ')'

  108 unary_expression_not_plusminus: postfix_expression
  109                               | '!' unary_expression
  110                               | '~' unary_expression
  111                               | cast_expression

  112 unary_expression: unary_expression_not_plusminus
  113                 | '+' unary_expression
  114                 | '-' unary_expression

  115 pre_increment_expression: INCR unary_expression

  116 pre_decrement_expression: DECR unary_expression

  117 cast_expression: parenthesized_expression unary_expression_not_plusminus
  118                | '(' qualified_identifier rank_specifier ')' unary_expression
  119                | '(' simple_type ')' unary_expression
  120                | '(' VOID ')' unary_expression

  121 multiplicative_expression: unary_expression
  122                          | multiplicative_expression '*' unary_expression
  123                          | multiplicative_expression '/' unary_expression
  124                          | multiplicative_expression '%' unary_expression

  125 additive_expression: multiplicative_expression
  126                    | additive_expression '+' multiplicative_expression
  127                    | additive_expression '-' multiplicative_expression

  128 shift_expression: additive_expression
  129                 | shift_expression LSHIFT additive_expression
  130                 | shift_expression right_shift additive_expression

  131 relational_expression: shift_expression
  132                      | relational_expression '<' shift_expression
  133                      | relational_expression '>' shift_expression
  134                      | relational_expression LE shift_expression
  135                      | relational_expression GE shift_expression

  136 equality_expression: relational_expression

  137 $@2: %empty

  138 equality_expression: equality_expression REQ relational_expression $@2
  139                    | equality_expression RNE relational_expression

  140 and_expression: equality_expression
  141               | and_expression '&' equality_expression

  142 exclusive_or_expression: and_expression
  143                        | exclusive_or_expression '^' and_expression

  144 inclusive_or_expression: exclusive_or_expression
  145                        | inclusive_or_expression '|' exclusive_or_expression

  146 conditional_and_expression: inclusive_or_expression
  147                           | conditional_and_expression RAND inclusive_or_expression

  148 conditional_or_expression: conditional_and_expression
  149                          | conditional_or_expression ROR conditional_and_expression

  150 null_coalescing_expression: conditional_or_expression
  151                           | conditional_or_expression DQM null_coalescing_expression

  152 conditional_expression: null_coalescing_expression
  153                       | null_coalescing_expression '?' expression ':' expression

  154 assignment: unary_expression assignment_operator expression

  155 assignment_operator: '='
  156                    | APLUS
  157                    | AMINUS
  158                    | AMULT
  159                    | ADIV
  160                    | AMOD
  161                    | AAND
  162                    | AOR
  163                    | ACARET
  164                    | LSHIFTEQ
  165                    | right_shift_assignment

  166 expression: non_assignment_expression
  167           | assignment

  168 non_assignment_expression: conditional_expression

  169 constant_expression: expression

  170 boolean_expression: expression

  171 statement: labeled_statement
  172          | declaration_statement
  173          | embedded_statement

  174 embedded_statement: block
  175                   | empty_statement
  176                   | expression_statement
  177                   | selection_statement
  178                   | iteration_statement
  179                   | jump_statement
  180                   | try_statement
  181                   | using_statement

  182 block: block_start '{' '}' block_end
  183      | block_start '{' statement_list '}' block_end

  184 block_start: epsilon

  185 block_end: epsilon

  186 statement_list: statement
  187               | statement_list statement

  188 empty_statement: ';'

  189 labeled_statement: identifier ':' statement

  190 declaration_statement: local_variable_declaration ';'
  191                      | local_constant_declaration ';'

  192 local_variable_declaration: local_variable_type local_variable_declarators

  193 local_variable_type: type

  194 local_variable_declarators: local_variable_declarator
  195                           | local_variable_declarators ',' local_variable_declarator

  196 local_variable_declarator: identifier
  197                          | identifier '=' local_variable_initializer

  198 local_variable_initializer: expression
  199                           | array_initializer

  200 local_constant_declaration: CONST type constant_declarators

  201 expression_statement: statement_expression ';'

  202 statement_expression: invocation_expression
  203                     | object_creation_expression
  204                     | assignment
  205                     | pre_increment_expression
  206                     | pre_decrement_expression

  207 selection_statement: if_statement
  208                    | switch_statement

  209 if_statement: IF '(' boolean_expression ')' embedded_statement
  210             | IF '(' boolean_expression ')' embedded_statement ELSE embedded_statement

  211 switch_statement: SWITCH '(' expression ')' switch_block

  212 switch_block: '{' '}'
  213             | '{' switch_sections '}'

  214 switch_sections: switch_section
  215                | switch_sections switch_section

  216 switch_section: switch_labels statement_list

  217 switch_labels: switch_label
  218              | switch_labels switch_label

  219 switch_label: CASE constant_expression ':'
  220             | DEFAULT ':'

  221 iteration_statement: while_statement
  222                    | do_statement
  223                    | for_statement

  224 while_statement: WHILE '(' boolean_expression ')' embedded_statement

  225 do_statement: DO embedded_statement WHILE '(' boolean_expression ')' ';'

  226 for_statement: block_start FOR '(' ';' ';' ')' embedded_statement
  227              | block_start FOR '(' for_initializer ';' ';' ')' embedded_statement
  228              | block_start FOR '(' ';' for_condition ';' ')' embedded_statement
  229              | block_start FOR '(' ';' ';' for_iterator ')' embedded_statement
  230              | block_start FOR '(' for_initializer ';' for_condition ';' ')' embedded_statement
  231              | block_start FOR '(' for_initializer ';' ';' for_iterator ')' embedded_statement
  232              | block_start FOR '(' ';' for_condition ';' for_iterator ')' embedded_statement
  233              | block_start FOR '(' for_initializer ';' for_condition ';' for_iterator ')' embedded_statement

  234 for_initializer: local_variable_declaration
  235                | statement_expression_list

  236 for_condition: boolean_expression

  237 for_iterator: statement_expression_list

  238 statement_expression_list: statement_expression
  239                          | statement_expression_list ',' statement_expression

  240 jump_statement: break_statement
  241               | continue_statement
  242               | goto_statement
  243               | return_statement
  244               | throw_statement

  245 break_statement: BREAK ';'

  246 continue_statement: CONTINUE ';'

  247 goto_statement: GOTO identifier ';'
  248               | GOTO CASE constant_expression ';'
  249               | GOTO DEFAULT ';'

  250 return_statement: RETURN ';'
  251                 | RETURN expression ';'

  252 throw_statement: THROW ';'
  253                | THROW expression ';'

  254 try_statement: TRY block catch_clauses
  255              | TRY block finally_clause
  256              | TRY block catch_clauses finally_clause

  257 catch_clauses: general_catch_clause

  258 general_catch_clause: CATCH block

  259 finally_clause: FINALLY block

  260 using_statement: USING '(' resource_acquisition ')' embedded_statement

  261 resource_acquisition: local_variable_declaration
  262                     | expression

  263 compilation_unit: using_directives namespace_member_declarations
  264                 | namespace_member_declarations
  265                 | using_directives
  266                 | epsilon

  267 namespace_declaration: block_start NAMESPACE qualified_identifier namespace_body
  268                      | block_start NAMESPACE qualified_identifier namespace_body ';'

  269 qualified_identifier: identifier
  270                     | qualified_identifier '.' identifier

  271 namespace_body: '{' '}'
  272               | '{' namespace_member_declarations '}'
  273               | '{' using_directives '}'
  274               | '{' using_directives namespace_member_declarations '}'

  275 using_directives: using_directive
  276                 | using_directives using_directive

  277 using_directive: using_alias_directive
  278                | using_namespace_directive

  279 using_alias_directive: USING identifier '=' namespace_or_type_name ';'

  280 using_namespace_directive: USING namespace_name ';'

  281 namespace_member_declarations: namespace_member_declaration
  282                              | namespace_member_declarations namespace_member_declaration

  283 namespace_member_declaration: namespace_declaration
  284                             | struct_declaration
  285                             | class_declaration

  286 qualified_alias_member: identifier DCLN identifier

  287 class_declaration: CLASS block_start class_init identifier class_body
  288                  | modifiers CLASS block_start class_init identifier class_body
  289                  | CLASS block_start class_init identifier class_base class_body
  290                  | CLASS block_start class_init identifier class_body ';'
  291                  | modifiers CLASS block_start class_init identifier class_base class_body
  292                  | modifiers CLASS block_start class_init identifier class_body ';'
  293                  | CLASS block_start class_init identifier class_base class_body ';'
  294                  | modifiers CLASS block_start class_init identifier class_base class_body ';'

  295 class_init: epsilon

  296 modifiers: modifier
  297          | modifiers modifier

  298 modifier: NEW
  299         | PUBLIC
  300         | PROTECTED
  301         | PRIVATE

  302 class_base: ':' class_type

  303 class_body: '{' '}'
  304           | '{' class_member_declarations '}'

  305 class_member_declarations: class_member_declaration
  306                          | class_member_declarations class_member_declaration

  307 class_member_declaration: constant_declaration
  308                         | field_declaration
  309                         | method_declaration
  310                         | constructor_declaration
  311                         | destructor_declaration
  312                         | struct_declaration

  313 constant_declaration: CONST type constant_declarators ';'
  314                     | modifiers CONST type constant_declarators ';'

  315 constant_declarators: constant_declarator
  316                     | constant_declarators ',' constant_declarator

  317 constant_declarator: identifier '=' constant_expression

  318 field_declaration: type variable_declarators ';'
  319                  | modifiers type variable_declarators ';'

  320 variable_declarators: variable_declarator
  321                     | variable_declarators ',' variable_declarator

  322 variable_declarator: identifier
  323                    | identifier '=' variable_initializer

  324 variable_initializer: expression
  325                     | array_initializer

  326 method_declaration: method_header method_body

  327 method_header: type member_name '(' ')'
  328              | modifiers type member_name '(' ')'
  329              | type member_name '(' formal_parameter_list ')'
  330              | modifiers type member_name '(' formal_parameter_list ')'
  331              | VOID member_name '(' ')'
  332              | modifiers VOID member_name '(' ')'
  333              | VOID member_name '(' formal_parameter_list ')'
  334              | modifiers VOID member_name '(' formal_parameter_list ')'

  335 member_name: qualified_identifier

  336 method_body: block
  337            | ';'

  338 formal_parameter_list: fixed_parameters
  339                      | fixed_parameters ',' parameter_array
  340                      | parameter_array

  341 fixed_parameters: fixed_parameter
  342                 | fixed_parameters ',' fixed_parameter

  343 fixed_parameter: type identifier
  344                | parameter_modifier type identifier
  345                | type identifier default_argument
  346                | parameter_modifier type identifier default_argument

  347 default_argument: '=' expression

  348 parameter_modifier: REF
  349                   | THIS

  350 parameter_array: PARAMS array_type identifier

  351 constructor_declaration: constructor_declarator constructor_body
  352                        | modifiers constructor_declarator constructor_body

  353 constructor_declarator: identifier '(' ')'
  354                       | identifier '(' ')' constructor_initializer
  355                       | identifier '(' formal_parameter_list ')'
  356                       | identifier '(' formal_parameter_list ')' constructor_initializer

  357 constructor_initializer: ':' BASE '(' ')'
  358                        | ':' BASE '(' argument_list ')'
  359                        | ':' THIS '(' ')'
  360                        | ':' THIS '(' argument_list ')'

  361 constructor_body: block
  362                 | ';'

  363 destructor_declaration: '~' identifier '(' ')' destructor_body

  364 destructor_body: block
  365                | ';'

  366 struct_declaration: STRUCT identifier struct_body
  367                   | modifiers STRUCT identifier struct_body
  368                   | STRUCT identifier struct_body ';'
  369                   | modifiers STRUCT identifier struct_body ';'

  370 struct_body: '{' '}'
  371            | '{' struct_member_declarations '}'

  372 struct_member_declarations: struct_member_declaration
  373                           | struct_member_declarations struct_member_declaration

  374 struct_member_declaration: constant_declaration
  375                          | field_declaration
  376                          | method_declaration
  377                          | constructor_declaration

  378 array_type: non_array_type rank_specifier

  379 rank_specifier: '[' ']'

  380 array_initializer: '{' '}'
  381                  | '{' variable_initializer_list '}'
  382                  | '{' variable_initializer_list ',' '}'

  383 variable_initializer_list: variable_initializer
  384                          | variable_initializer_list ',' variable_initializer

  385 epsilon: %empty


Terminals, with rules where they appear

$end (0) 0
'!' (33) 109
'%' (37) 124
'&' (38) 141
'(' (40) 58 69 70 71 72 82 83 84 85 105 106 107 118 119 120 209 210
    211 224 225 226 227 228 229 230 231 232 233 260 327 328 329 330
    331 332 333 334 353 354 355 356 357 358 359 360 363
')' (41) 58 69 70 71 72 82 83 84 85 105 106 107 118 119 120 209 210
    211 224 225 226 227 228 229 230 231 232 233 260 327 328 329 330
    331 332 333 334 353 354 355 356 357 358 359 360 363
'*' (42) 122
'+' (43) 113 126
',' (44) 40 76 90 92 97 99 195 239 316 321 339 342 382 384
'-' (45) 114 127
'.' (46) 60 61 62 78 270
'/' (47) 123
':' (58) 43 153 189 219 220 302 357 358 359 360
';' (59) 188 190 191 201 225 226 227 228 229 230 231 232 233 245 246
    247 248 249 250 251 252 253 268 279 280 290 292 293 294 313 314
    318 319 337 362 365 368 369
'<' (60) 132
'=' (61) 93 155 197 279 317 323 347
'>' (62) 133
'?' (63) 34 153
'[' (91) 73 74 79 102 103 379
']' (93) 73 74 79 102 103 379
'^' (94) 143
'{' (123) 88 89 90 96 97 101 182 183 212 213 271 272 273 274 303 304
    370 371 380 381 382
'|' (124) 145
'}' (125) 88 89 90 96 97 101 182 183 212 213 271 272 273 274 303 304
    370 371 380 381 382
'~' (126) 110 363
error (256)
IFX (258)
ELSE (259) 210
CONST (260) 200 313 314
CONTINUE (261) 246
DEFAULT (262) 107 220 249
DO (263) 225
FINALLY (264) 259
FOR (265) 226 227 228 229 230 231 232 233
GOTO (266) 247 248 249
IF (267) 209 210
IN (268)
NAMESPACE (269) 267 268
PARAMS (270) 350
REF (271) 45 348
RETURN (272) 250 251
STRUCT (273) 366 367 368 369
SWITCH (274) 211
THROW (275) 252 253
TRY (276) 254 255 256
TYPEOF (277) 105 106
USING (278) 260 279 280
VOID (279) 106 120 331 332 333 334
WHILE (280) 224 225
SIMPLE_ESC_SEQ (281)
CHAR_LITERAL (282) 12
REG_STR_LITERAL (283) 13
VER_STR_LITERAL (284) 14
DQM (285) 151
RAND (286) 147
ROR (287) 149
REQ (288) 138
RNE (289) 139
LE (290) 134
GE (291) 135
APLUS (292) 156
AMINUS (293) 157
AMULT (294) 158
ADIV (295) 159
AMOD (296) 160
AAND (297) 161
AOR (298) 162
ACARET (299) 163
LSHIFT (300) 129
LSHIFTEQ (301) 164
WHERE (302)
TRUE (303) 8
FALSE (304) 9
DCLN (305) 286
RSHIFT (306) 16
RSHIFTEQ (307) 17
INT (308) 31 65
CHAR (309) 33 64
LONG (310) 32 66
OBJECT (311) 36 67
STRING (312) 37 68
BOOL (313) 29 63
ID (314) 2
NULL_LIT (315) 15
THIS (316) 77 349 359 360
INCR (317) 115
DECR (318) 116
NEW (319) 82 83 84 85 102 103 104 298
PUBLIC (320) 299
PROTECTED (321) 300
PRIVATE (322) 301
BREAK (323) 245
CASE (324) 219 248
CATCH (325) 258
BASE (326) 78 79 357 358
CLASS (327) 287 288 289 290 291 292 293 294
DINT_LITERAL (328) 10
HDINT_LITERAL (329) 11


Nonterminals, with rules where they appear

$accept (99)
    on left: 0
start (100)
    on left: 1, on right: 0
identifier (101)
    on left: 2, on right: 43 60 61 62 78 93 189 196 197 247 269 270
    279 286 287 288 289 290 291 292 293 294 317 322 323 343 344 345
    346 350 353 354 355 356 363 366 367 368 369
literal (102)
    on left: 3 4 5 6 7, on right: 49
boolean_literal (103)
    on left: 8 9, on right: 3
integer_literal (104)
    on left: 10 11, on right: 4 102 103
character_literal (105)
    on left: 12, on right: 5
string_literal (106)
    on left: 13 14, on right: 6
null_literal (107)
    on left: 15, on right: 7
right_shift (108)
    on left: 16, on right: 130
right_shift_assignment (109)
    on left: 17, on right: 165
namespace_name (110)
    on left: 18, on right: 280
type_name (111)
    on left: 19, on right: 24
namespace_or_type_name (112)
    on left: 20 21, on right: 18 19 279
type (113)
    on left: 22 23, on right: 82 83 84 85 105 107 193 200 313 314 318
    319 327 328 329 330 343 344 345 346
non_array_type (114)
    on left: 24 25 26, on right: 22 102 103 378
simple_type (115)
    on left: 27 28 29, on right: 25 35 119
numeric_type (116)
    on left: 30, on right: 27
integral_type (117)
    on left: 31 32 33, on right: 30
nullable_type (118)
    on left: 34, on right: 26
non_nullable_value_type (119)
    on left: 35, on right: 34
class_type (120)
    on left: 36 37, on right: 28 302
variable_reference (121)
    on left: 38, on right: 45
argument_list (122)
    on left: 39 40, on right: 40 70 72 83 85 358 360
argument (123)
    on left: 41 42, on right: 39 40
argument_name (124)
    on left: 43, on right: 42
argument_value (125)
    on left: 44 45, on right: 41 42
primary_expression (126)
    on left: 46 47 48, on right: 60 80
primary_no_array_creation_expression (127)
    on left: 49 50 51 52 53 54 55 56 57, on right: 46 69 70 73
parenthesized_expression (128)
    on left: 58, on right: 48 117
member_access (129)
    on left: 60 61 62, on right: 50
$@1 (130)
    on left: 59, on right: 60
predefined_type (131)
    on left: 63 64 65 66 67 68, on right: 61
invocation_expression (132)
    on left: 69 70 71 72, on right: 51 202
element_access (133)
    on left: 73 74, on right: 52
expression_list (134)
    on left: 75 76, on right: 76 79 101
this_access (135)
    on left: 77, on right: 53
base_access (136)
    on left: 78 79, on right: 54
postfix_expression (137)
    on left: 80 81, on right: 108
object_creation_expression (138)
    on left: 82 83 84 85, on right: 55 203
object_or_collection_initializer (139)
    on left: 86 87, on right: 84 85 95
object_initializer (140)
    on left: 88 89 90, on right: 86
member_initializer_list (141)
    on left: 91 92, on right: 89 90 92
member_initializer (142)
    on left: 93, on right: 91 92
initializer_value (143)
    on left: 94 95, on right: 93
collection_initializer (144)
    on left: 96 97, on right: 87
element_initializer_list (145)
    on left: 98 99, on right: 96 97 99
element_initializer (146)
    on left: 100 101, on right: 98 99
array_creation_expression (147)
    on left: 102 103 104, on right: 47
typeof_expression (148)
    on left: 105 106, on right: 56
default_value_expression (149)
    on left: 107, on right: 57
unary_expression_not_plusminus (150)
    on left: 108 109 110 111, on right: 112 117
unary_expression (151)
    on left: 112 113 114, on right: 109 110 113 114 115 116 118 119
    120 121 122 123 124 154
pre_increment_expression (152)
    on left: 115, on right: 205
pre_decrement_expression (153)
    on left: 116, on right: 206
cast_expression (154)
    on left: 117 118 119 120, on right: 111
multiplicative_expression (155)
    on left: 121 122 123 124, on right: 122 123 124 125 126 127
additive_expression (156)
    on left: 125 126 127, on right: 126 127 128 129 130
shift_expression (157)
    on left: 128 129 130, on right: 129 130 131 132 133 134 135
relational_expression (158)
    on left: 131 132 133 134 135, on right: 132 133 134 135 136 138
    139
equality_expression (159)
    on left: 136 138 139, on right: 138 139 140 141
$@2 (160)
    on left: 137, on right: 138
and_expression (161)
    on left: 140 141, on right: 141 142 143
exclusive_or_expression (162)
    on left: 142 143, on right: 143 144 145
inclusive_or_expression (163)
    on left: 144 145, on right: 145 146 147
conditional_and_expression (164)
    on left: 146 147, on right: 147 148 149
conditional_or_expression (165)
    on left: 148 149, on right: 149 150 151
null_coalescing_expression (166)
    on left: 150 151, on right: 151 152 153
conditional_expression (167)
    on left: 152 153, on right: 168
assignment (168)
    on left: 154, on right: 167 204
assignment_operator (169)
    on left: 155 156 157 158 159 160 161 162 163 164 165, on right:
    154
expression (170)
    on left: 166 167, on right: 38 44 58 73 74 75 76 94 153 154 169
    170 198 211 251 253 262 324 347
non_assignment_expression (171)
    on left: 168, on right: 100 166
constant_expression (172)
    on left: 169, on right: 219 248 317
boolean_expression (173)
    on left: 170, on right: 209 210 224 225 236
statement (174)
    on left: 171 172 173, on right: 186 187 189
embedded_statement (175)
    on left: 174 175 176 177 178 179 180 181, on right: 173 209 210
    224 225 226 227 228 229 230 231 232 233 260
block (176)
    on left: 182 183, on right: 174 254 255 256 258 259 336 361 364
block_start (177)
    on left: 184, on right: 182 183 226 227 228 229 230 231 232 233
    267 268 287 288 289 290 291 292 293 294
block_end (178)
    on left: 185, on right: 182 183
statement_list (179)
    on left: 186 187, on right: 183 187 216
empty_statement (180)
    on left: 188, on right: 175
labeled_statement (181)
    on left: 189, on right: 171
declaration_statement (182)
    on left: 190 191, on right: 172
local_variable_declaration (183)
    on left: 192, on right: 190 234 261
local_variable_type (184)
    on left: 193, on right: 192
local_variable_declarators (185)
    on left: 194 195, on right: 192 195
local_variable_declarator (186)
    on left: 196 197, on right: 194 195
local_variable_initializer (187)
    on left: 198 199, on right: 197
local_constant_declaration (188)
    on left: 200, on right: 191
expression_statement (189)
    on left: 201, on right: 176
statement_expression (190)
    on left: 202 203 204 205 206, on right: 201 238 239
selection_statement (191)
    on left: 207 208, on right: 177
if_statement (192)
    on left: 209 210, on right: 207
switch_statement (193)
    on left: 211, on right: 208
switch_block (194)
    on left: 212 213, on right: 211
switch_sections (195)
    on left: 214 215, on right: 213 215
switch_section (196)
    on left: 216, on right: 214 215
switch_labels (197)
    on left: 217 218, on right: 216 218
switch_label (198)
    on left: 219 220, on right: 217 218
iteration_statement (199)
    on left: 221 222 223, on right: 178
while_statement (200)
    on left: 224, on right: 221
do_statement (201)
    on left: 225, on right: 222
for_statement (202)
    on left: 226 227 228 229 230 231 232 233, on right: 223
for_initializer (203)
    on left: 234 235, on right: 227 230 231 233
for_condition (204)
    on left: 236, on right: 228 230 232 233
for_iterator (205)
    on left: 237, on right: 229 231 232 233
statement_expression_list (206)
    on left: 238 239, on right: 235 237 239
jump_statement (207)
    on left: 240 241 242 243 244, on right: 179
break_statement (208)
    on left: 245, on right: 240
continue_statement (209)
    on left: 246, on right: 241
goto_statement (210)
    on left: 247 248 249, on right: 242
return_statement (211)
    on left: 250 251, on right: 243
throw_statement (212)
    on left: 252 253, on right: 244
try_statement (213)
    on left: 254 255 256, on right: 180
catch_clauses (214)
    on left: 257, on right: 254 256
general_catch_clause (215)
    on left: 258, on right: 257
finally_clause (216)
    on left: 259, on right: 255 256
using_statement (217)
    on left: 260, on right: 181
resource_acquisition (218)
    on left: 261 262, on right: 260
compilation_unit (219)
    on left: 263 264 265 266, on right: 1
namespace_declaration (220)
    on left: 267 268, on right: 283
qualified_identifier (221)
    on left: 269 270, on right: 20 71 72 74 81 118 267 268 270 335
namespace_body (222)
    on left: 271 272 273 274, on right: 267 268
using_directives (223)
    on left: 275 276, on right: 263 265 273 274 276
using_directive (224)
    on left: 277 278, on right: 275 276
using_alias_directive (225)
    on left: 279, on right: 277
using_namespace_directive (226)
    on left: 280, on right: 278
namespace_member_declarations (227)
    on left: 281 282, on right: 263 264 272 274 282
namespace_member_declaration (228)
    on left: 283 284 285, on right: 281 282
qualified_alias_member (229)
    on left: 286, on right: 21 62
class_declaration (230)
    on left: 287 288 289 290 291 292 293 294, on right: 285
class_init (231)
    on left: 295, on right: 287 288 289 290 291 292 293 294
modifiers (232)
    on left: 296 297, on right: 288 291 292 294 297 314 319 328 330
    332 334 352 367 369
modifier (233)
    on left: 298 299 300 301, on right: 296 297
class_base (234)
    on left: 302, on right: 289 291 293 294
class_body (235)
    on left: 303 304, on right: 287 288 289 290 291 292 293 294
class_member_declarations (236)
    on left: 305 306, on right: 304 306
class_member_declaration (237)
    on left: 307 308 309 310 311 312, on right: 305 306
constant_declaration (238)
    on left: 313 314, on right: 307 374
constant_declarators (239)
    on left: 315 316, on right: 200 313 314 316
constant_declarator (240)
    on left: 317, on right: 315 316
field_declaration (241)
    on left: 318 319, on right: 308 375
variable_declarators (242)
    on left: 320 321, on right: 318 319 321
variable_declarator (243)
    on left: 322 323, on right: 320 321
variable_initializer (244)
    on left: 324 325, on right: 323 383 384
method_declaration (245)
    on left: 326, on right: 309 376
method_header (246)
    on left: 327 328 329 330 331 332 333 334, on right: 326
member_name (247)
    on left: 335, on right: 327 328 329 330 331 332 333 334
method_body (248)
    on left: 336 337, on right: 326
formal_parameter_list (249)
    on left: 338 339 340, on right: 329 330 333 334 355 356
fixed_parameters (250)
    on left: 341 342, on right: 338 339 342
fixed_parameter (251)
    on left: 343 344 345 346, on right: 341 342
default_argument (252)
    on left: 347, on right: 345 346
parameter_modifier (253)
    on left: 348 349, on right: 344 346
parameter_array (254)
    on left: 350, on right: 339 340
constructor_declaration (255)
    on left: 351 352, on right: 310 377
constructor_declarator (256)
    on left: 353 354 355 356, on right: 351 352
constructor_initializer (257)
    on left: 357 358 359 360, on right: 354 356
constructor_body (258)
    on left: 361 362, on right: 351 352
destructor_declaration (259)
    on left: 363, on right: 311
destructor_body (260)
    on left: 364 365, on right: 363
struct_declaration (261)
    on left: 366 367 368 369, on right: 284 312
struct_body (262)
    on left: 370 371, on right: 366 367 368 369
struct_member_declarations (263)
    on left: 372 373, on right: 371 373
struct_member_declaration (264)
    on left: 374 375 376 377, on right: 372 373
array_type (265)
    on left: 378, on right: 23 104 350
rank_specifier (266)
    on left: 379, on right: 118 378
array_initializer (267)
    on left: 380 381 382, on right: 103 104 199 325
variable_initializer_list (268)
    on left: 383 384, on right: 381 382 384
epsilon (269)
    on left: 385, on right: 184 185 266 295


State 0

    0 $accept: . start $end

    STRUCT     shift, and go to state 1
    USING      shift, and go to state 2
    NEW        shift, and go to state 3
    PUBLIC     shift, and go to state 4
    PROTECTED  shift, and go to state 5
    PRIVATE    shift, and go to state 6
    CLASS      shift, and go to state 7

    $default  reduce using rule 385 (epsilon)

    start                          go to state 8
    block_start                    go to state 9
    compilation_unit               go to state 10
    namespace_declaration          go to state 11
    using_directives               go to state 12
    using_directive                go to state 13
    using_alias_directive          go to state 14
    using_namespace_directive      go to state 15
    namespace_member_declarations  go to state 16
    namespace_member_declaration   go to state 17
    class_declaration              go to state 18
    modifiers                      go to state 19
    modifier                       go to state 20
    struct_declaration             go to state 21
    epsilon                        go to state 22


State 1

  366 struct_declaration: STRUCT . identifier struct_body
  368                   | STRUCT . identifier struct_body ';'

    ID  shift, and go to state 23

    identifier  go to state 24


State 2

  279 using_alias_directive: USING . identifier '=' namespace_or_type_name ';'
  280 using_namespace_directive: USING . namespace_name ';'

    ID  shift, and go to state 23

    identifier              go to state 25
    namespace_name          go to state 26
    namespace_or_type_name  go to state 27
    qualified_identifier    go to state 28
    qualified_alias_member  go to state 29


State 3

  298 modifier: NEW .

    $default  reduce using rule 298 (modifier)


State 4

  299 modifier: PUBLIC .

    $default  reduce using rule 299 (modifier)


State 5

  300 modifier: PROTECTED .

    $default  reduce using rule 300 (modifier)


State 6

  301 modifier: PRIVATE .

    $default  reduce using rule 301 (modifier)


State 7

  287 class_declaration: CLASS . block_start class_init identifier class_body
  289                  | CLASS . block_start class_init identifier class_base class_body
  290                  | CLASS . block_start class_init identifier class_body ';'
  293                  | CLASS . block_start class_init identifier class_base class_body ';'

    $default  reduce using rule 385 (epsilon)

    block_start  go to state 30
    epsilon      go to state 31


State 8

    0 $accept: start . $end

    $end  shift, and go to state 32


State 9

  267 namespace_declaration: block_start . NAMESPACE qualified_identifier namespace_body
  268                      | block_start . NAMESPACE qualified_identifier namespace_body ';'

    NAMESPACE  shift, and go to state 33


State 10

    1 start: compilation_unit .

    $default  reduce using rule 1 (start)


State 11

  283 namespace_member_declaration: namespace_declaration .

    $default  reduce using rule 283 (namespace_member_declaration)


State 12

  263 compilation_unit: using_directives . namespace_member_declarations
  265                 | using_directives .
  276 using_directives: using_directives . using_directive

    STRUCT     shift, and go to state 1
    USING      shift, and go to state 2
    NEW        shift, and go to state 3
    PUBLIC     shift, and go to state 4
    PROTECTED  shift, and go to state 5
    PRIVATE    shift, and go to state 6
    CLASS      shift, and go to state 7

    NAMESPACE  reduce using rule 385 (epsilon)
    $default   reduce using rule 265 (compilation_unit)

    block_start                    go to state 9
    namespace_declaration          go to state 11
    using_directive                go to state 34
    using_alias_directive          go to state 14
    using_namespace_directive      go to state 15
    namespace_member_declarations  go to state 35
    namespace_member_declaration   go to state 17
    class_declaration              go to state 18
    modifiers                      go to state 19
    modifier                       go to state 20
    struct_declaration             go to state 21
    epsilon                        go to state 31


State 13

  275 using_directives: using_directive .
